III-1179 styling roles search result

--- a/src/styles/query-search-result.less
+++ b/src/styles/query-search-result.less
@@ -6,3 +6,18 @@
 .query-search-result .table {
   margin-bottom: 0px;
 }
+
+.roles-results {
+  .table {
+    thead {
+      tr {
+        th:first-child {
+          width: 80%;
+        }
+        th:last-child {
+          width: 20%;
+        }
+      }
+    }
+  }
+}
