--- a/src/entry/logging/job-log.component.html
+++ b/src/entry/logging/job-log.component.html
@@ -11,7 +11,7 @@
       <div class="udb-job-block udb-job-block-ready">
         <p class="udb-job-title">Geëxporteerde documenten</p>
         <ul class="list-unstyled udb-job-messages">
-          <li class="alert repeat-animation" ng-repeat="job in logger.getFinishedExportJobs()">
+          <li class="udb-alert repeat-animation" ng-repeat="job in logger.getFinishedExportJobs()">
             <udb-job></udb-job>
           </li>
         </ul>
@@ -20,7 +20,7 @@
       <div class="udb-job-block udb-job-block-errors">
         <p class="udb-job-title">Meldingen <span class="badge" ng-bind="logger.getFailedJobs().length"></span></p>
         <ul class="list-unstyled udb-job-messages">
-          <li class="alert repeat-animation" ng-repeat="job in logger.getFailedJobs()">
+          <li class="udb-alert repeat-animation" ng-repeat="job in logger.getFailedJobs()">
             <udb-job></udb-job>
           </li>
         </ul>
@@ -29,7 +29,7 @@
       <div class="udb-job-block udb-job-block-pending">
         <p class="udb-job-title">Bezig</p>
         <ul class="list-unstyled udb-job-messages">
-          <li class="alert repeat-animation" ng-repeat="job in logger.getQueuedJobs()">
+          <li class="udb-alert repeat-animation" ng-repeat="job in logger.getQueuedJobs()">
             <udb-job></udb-job>
           </li>
         </ul>
