III-1276 Added extra containers to fill in with onboarding-messages

--- a/src/entry/logging/job-log.component.html
+++ b/src/entry/logging/job-log.component.html
@@ -4,6 +4,11 @@
          <div class="col-sm-12">
             <button type="button" class="close" ng-click="logger.hideJobLog()"><span aria-hidden="true">&times;</span></button>
          </div>
+         <div class="col-sm-12">
+           <div class="udb-job-log-header-message">
+             <!-- udb-job-log-header-message -->
+           </div>
+         </div>
      </div>
  </div>
   <div class="row">
@@ -34,6 +39,11 @@
           </li>
         </ul>
       </div>
+
+      <div class="udb-job-log-footer-message">
+        <!-- udb-job-log-footer-message -->
+      </div>
+
     </div>
   </div>
 </div>
