III-1277 use .modal-title on modal-titles to remove unnecessary padding

--- a/src/search/components/query-editor-modal.html
+++ b/src/search/components/query-editor-modal.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h2>Geavanceerde zoekopdracht bouwer</h2>
+  <h2 class="modal-title">Geavanceerde zoekopdracht bouwer</h2>
 </div>
 
 <div class="modal-body">
