III-1277 Empty container to inject onboarding message to users

--- a/src/search/components/query-editor-modal.html
+++ b/src/search/components/query-editor-modal.html
@@ -3,6 +3,11 @@
 </div>
 
 <div class="modal-body">
+
+  <div class="udb-query-editor-header">
+    <!-- udb-query-editor-header -->
+  </div>
+
   <div class="udb-query-editor">
     <div class="panel panel-default" ng-repeat="rootGroup in qe.groupedQueryTree.nodes">
 
