III-1173: beauty changes

--- a/src/styles/management-form.less
+++ b/src/styles/management-form.less
@@ -9,3 +9,11 @@
 .role-form-tabset .tab-pane {
     padding-top: 1ex;
 }
+
+udb-search-label i.caret {
+    display: none;
+}
+
+.form-group udb-search-label input {
+    max-width: none;
+}
