--- a/src/search/components/label-select.html
+++ b/src/search/components/label-select.html
@@ -19,7 +19,7 @@
                        minimum-input-length="{{select.minimumInputLength}}">
         <div>
             <span ng-bind-html="label.name | highlight: $select.search"></span>
-            <span ng-if="!label.id"> (nieuw label toevoegen)</span>
+            <span ng-if="!label.uuid"> (nieuw label toevoegen)</span>
         </div>
     </ui-select-choices>
 </ui-select>
