III-1191: Clean up user search-result alerts and align add button

--- a/src/styles/query-search-result.less
+++ b/src/styles/query-search-result.less
@@ -3,6 +3,10 @@
   pointer-events: none;
 }
 
+.search-result-block {
+  margin-top: 1em;
+}
+
 .query-search-result .table {
   margin-bottom: 0px;
 }
