--- a/src/search/components/label-select.html
+++ b/src/search/components/label-select.html
@@ -6,13 +6,13 @@
            on-select="select.labelAdded({label: $item})"
            on-remove="select.labelRemoved({label: $item})">
     <ui-select-match placeholder="Voeg een label toe...">{{$item.name}}</ui-select-match>
-    <ui-select-no-choice ng-show="$select.search.length >= select.minimumInputLength &&">
+    <ui-select-no-choice ng-show="select.areLengthCriteriaMet($select.search.length) &&">
         <div class="udb-label-select-refreshing" style="padding: 3px 20px">
             <i class="fa fa-circle-o-notch fa-spin"></i> Suggesties laden
         </div>
     </ui-select-no-choice>
     <ui-select-choices repeat="label in select.availableLabels track by label.name"
-                       ng-show="$select.search.length >= select.minimumInputLength &&"
+                       ng-show="select.areLengthCriteriaMet($select.search.length) &&"
                        ui-disable-choice="select.refreshing"
                        refresh="select.suggestLabels($select.search)"
                        refresh-delay="0"
