--- a/src/event_form/components/reservation-modal/reservation-modal.html
+++ b/src/event_form/components/reservation-modal/reservation-modal.html
@@ -1,6 +1,6 @@
 <div class="modal-content">
   <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span>
+    <button type="button" class="close" data-dismiss="modal" ng-click="cancel()"><span aria-hidden="true">×</span><span class="sr-only">Close</span>
     </button>
     <h4 class="modal-title">Reservatieperiode</h4>
   </div>
