--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -17,7 +17,8 @@ label.checkbox > [type="checkbox"] {
   margin-top: 6px;
 }
 
-.form-group input {
+.form-group input,
+.form-group select {
   max-width: 450px;
 }
 
