III-963 styling for contact and booking info

--- a/src/styles/event-form.less
+++ b/src/styles/event-form.less
@@ -625,3 +625,9 @@
 #locatie-kiezer {
   min-height: 100px;
 }
+
+form[name="contactInfoForm"] {
+  table {
+    border: 1px solid @udb-gray-light;
+  }
+}
