III-963 create bookingPeriod directive

--- a/src/styles/event-form.less
+++ b/src/styles/event-form.less
@@ -626,7 +626,8 @@
   min-height: 100px;
 }
 
-form[name="contactInfoForm"] {
+form[name="contactInfoForm"],
+form[name="bookingPeriod"]{
   table {
     border: 1px solid @udb-gray-light;
   }
