--- a/src/styles/event-form.less
+++ b/src/styles/event-form.less
@@ -627,8 +627,16 @@
 }
 
 form[name="contactInfoForm"],
-form[name="bookingPeriod"]{
+form[name="bookingPeriod"] {
   table {
     border: 1px solid @udb-gray-light;
   }
+}
+
+.npr {
+  padding-right: 0px;
+}
+
+.npl {
+  padding-left: 0px;
 }
