--- a/src/styles/utility.less
+++ b/src/styles/utility.less
@@ -25,3 +25,12 @@ textarea.resize-vertical {
 .dashboard-item .dropdown {
   min-width: 120px;
 }
+
+.title {
+  margin: 0;
+  line-height: 56px;
+  font-weight: 300;
+  color: @text-color;
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 30px;
+}
