III-963 remove cryptical class names from less file

--- a/src/styles/event-form.less
+++ b/src/styles/event-form.less
@@ -626,8 +626,8 @@
   min-height: 100px;
 }
 
-form[name="contactInfoForm"],
-form[name="bookingPeriod"] {
+form.contact-info,
+form.booking-period {
   table {
     border: 1px solid @udb-gray-light;
   }
