--- a/src/event_form/components/reservation-period/reservation-period.html
+++ b/src/event_form/components/reservation-period/reservation-period.html
@@ -8,7 +8,7 @@
         <p><strong>Reservatie periode</strong></p>
         <div class="alert alert-danger" ng-if="errorMessage" ng-bind="::errorMessage">
         </div>
-        <form name="bookingPeriod">
+        <form name="bookingPeriod" class="booking-period">
             <table class="table">
                 <tr>
                     <td>
