III-933 show line breaks on description

--- a/src/styles/event-form.less
+++ b/src/styles/event-form.less
@@ -226,6 +226,10 @@
     margin-bottom: 0.5em;
   }
 
+  .description-text {
+    white-space: pre-line;
+  }
+
   .udb3-data-table {
     table-layout: fixed;
   }
@@ -624,4 +628,19 @@
 #gemeente-kiezer,
 #locatie-kiezer {
   min-height: 100px;
+}
+
+form.contact-info,
+form.booking-period {
+  table {
+    border: 1px solid @udb-gray-light;
+  }
+}
+
+.npr {
+  padding-right: 0px;
+}
+
+.npl {
+  padding-left: 0px;
 }
