--- a/src/management/moderation/components/moderation-offer.html
+++ b/src/management/moderation/components/moderation-offer.html
@@ -1,5 +1,5 @@
 <div>
     <div class="error text-danger" ng-show="moc.error" ng-bind="moc.error"></div>
     <h2 ng-bind="moc.offer.name"></h2>
-    <p ng-bind="moc.offer.description"></p>
+    <p ng-bind-html="moc.offer.description"></p>
 </div>
