--- a/src/management/moderation/components/moderation-offer.html
+++ b/src/management/moderation/components/moderation-offer.html
@@ -1,5 +1,32 @@
-<div>
+<article class="moderation-offer">
     <div class="error text-danger" ng-show="moc.error" ng-bind="moc.error"></div>
-    <h2 ng-bind="moc.offer.name"></h2>
-    <p ng-bind-html="moc.offer.description"></p>
+    <div class="text-info" ng-show="moc.loading"><i class="fa fa-circle-o-notch fa-spin"></i> Moderatie aanbod "{{moc.offerId}}" wordt geladen.</div>
+
+    <div class="row" ng-hide="moc-loading">
+        <div class="col-md-9">
+            <header class="udb-short-info">
+                <span class="udb-category" ng-bind="moc.offer.type.label"></span>
+                <span class="udb-short-info-seperator" ng-show="moc.offer.type.label && moc.offer.theme.label"> • </span>
+                <span class="udb-theme" ng-bind="moc.offer.theme.label"></span>
+
+                <h2 ng-bind="moc.offer.name"></h2>
+            </header>
+
+            <div class="content" ng-bind-html="moc.offer.description"></div>
+        </div>
+        <div class="col-md-3" ng-class="{muted: !moc.offer.image}">
+            <img ng-if="moc.offer.image" class="offer-image-thumbnail center-block" ng-src="{{moc.offer.image}}"/>
+            <div class="no-img center-block" ng-if="!moc.offer.image">Geen afbeelding</div>
+        </div>
+    </div>
+
+    <footer class="row" ng-hide="moc.loading">
+        <div class="col-md-6">Toegevoegd door {{moc.offer.creator}}</div>
+        <div class="col-md-6 text-right">
+            <button type="submit" class="btn btn-success btn-moderation">
+                <i class="fa fa-flag text-success"></i>Goedkeuren</button>
+            <button type="submit" class="btn btn-danger btn-moderation">
+                <i class="fa fa-flag text-danger"></i>Afkeuren</button>
+        </div>
+    </footer>
 </div>
