III-1343 disable the form when website and name aren't valid

--- a/src/event_form/components/organizer/event-form-organizer-modal.html
+++ b/src/event_form/components/organizer/event-form-organizer-modal.html
@@ -14,7 +14,7 @@
                    name="website"
                    class="form-control"
                    ng-model="newOrganizer.website"
-                   ng-blur="validateWebsite()"
+                   ng-change="validateWebsite()"
                    required> <i class="fa fa-circle-o-notch fa-spin" ng-show="showWebsiteValidation"></i>
             <p class="help-block" ng-hide="organizersWebsiteFound">Om organisaties in de UiTdatabank uniek bij te houden, vragen we elke organisatie een unieke & geldige hyperlink.</p>
             <p class="error help-block" ng-show="organizersWebsiteFound">Dit adres is al gebruikt door de organisatie \'<span ng-bind="firstOrganizerFound.name"></span>\'. Geef een unieke website of <a ng-click="useFirstOrganizerFound()">gebruik <span ng-bind="firstOrganizerFound.name"></span> als organisatie</a>.</p>
@@ -164,7 +164,10 @@
 </div>
 <div class="modal-footer" ng-hide="organizersFound">
   <button type="button" class="btn btn-default" ng-click="cancel()">Sluiten</button>
-  <button type="button" class="btn btn-primary organisator-toevoegen-bewaren" ng-click="validateNewOrganizer()">
+  <button type="button"
+          class="btn btn-primary organisator-toevoegen-bewaren"
+          ng-disabled="disableSubmit"
+          ng-click="validateNewOrganizer()">
     Bewaren <i class="fa fa-circle-o-notch fa-spin" ng-show="saving"></i>
   </button>
 </div>
