III-1232: display whitespace for moderation items

--- a/src/styles/moderation.less
+++ b/src/styles/moderation.less
@@ -13,6 +13,7 @@ udb-moderation-offer {
         div.content {
             height: 150px;
             overflow-y: auto;
+            white-space: pre-line;
         }
 
         img {
