III-1447: style publish button

--- a/src/styles/event-form.less
+++ b/src/styles/event-form.less
@@ -563,6 +563,19 @@
   a {
     text-decoration: underline;
   }
+
+  .event-validation {
+    background-color: @white;
+    padding: 1em;
+    padding-top: 2em;
+    margin-left: -1em;
+    margin-top: 2em;
+    margin-right: -1em;
+
+    p {
+      color: #626262;
+    }
+  }
 }
 
 .event-type-choser-label {
