--- a/src/styles/event-form.less
+++ b/src/styles/event-form.less
@@ -1,6 +1,6 @@
 .offer-form {
   @border-color: @udb-gray-light;
-  margin-bottom: 100px;
+  margin-bottom: 33vw;
 
   .alert {
     margin-top: 10px;
