III-1224 some more error handling

--- a/src/styles/event-form.less
+++ b/src/styles/event-form.less
@@ -563,6 +563,10 @@
   a {
     text-decoration: underline;
   }
+
+  input.has-error {
+    border: 1px solid #f3453f;
+  }
 }
 
 .event-type-choser-label {
