III-1224 price css class

--- a/src/event_form/components/price-info/priceInfo.html
+++ b/src/event_form/components/price-info/priceInfo.html
@@ -1,5 +1,5 @@
 <div class="row extra-prijs">
-  <div class="extra-task" ng-class="priceCssClass">
+  <div class="extra-task" ng-class="$ctrl.priceCssClass">
     <div class="col-sm-3">
       <em class="extra-task-label">Prijs</em>
         <i class="fa fa-circle-o-notch fa-spin" ng-show="savingPrice"></i>
