III-1224 change the price model on blur

--- a/src/event_form/components/price-info/priceInfo.html
+++ b/src/event_form/components/price-info/priceInfo.html
@@ -73,6 +73,7 @@
                        class="form-control"
                        name="price"
                        ng-model="priceInfo.price"
+                       ng-model-options="{ updateOn: 'blur' }"
                        ng-class="{ 'has-error': priceInfoForm.price.$invalid && formPriceSubmitted}"
                        required />
                   euro
