III-1224 fix add price button

--- a/src/event_form/components/price-info/priceInfo.html
+++ b/src/event_form/components/price-info/priceInfo.html
@@ -10,7 +10,7 @@
         <section>
           <a class="btn btn-default to-filling"
              ng-show="!$ctrl.editPrice"
-             ng-click="$ctrl.priceCssClass = 'state-filling'; editingPrice()">
+             ng-click="$ctrl.priceCssClass = 'state-filling'; $ctrl.editingPrice()">
             Prijzen toevoegen
           </a>
           <a class="btn btn-link"
