--- a/src/styles/event-form.less
+++ b/src/styles/event-form.less
@@ -631,3 +631,7 @@
 #locatie-kiezer {
   min-height: 100px;
 }
+
+#titel .help-block {
+  max-width: 450px; // corresponds to linelength of +/- 65 characters
+}
