III-1510 make publish-bar fixed

--- a/src/styles/event-form.less
+++ b/src/styles/event-form.less
@@ -559,6 +559,24 @@
   a {
     text-decoration: underline;
   }
+
+  input.has-error {
+    border: 1px solid #f3453f;
+  }
+
+  .event-validation {
+    background-color: @white;
+    padding: 1em;
+    position: fixed;
+    bottom: 0;
+    margin-left: -15px;
+    border-top: 1px solid @border-color;
+    width: 100%;
+
+    div.text-danger {
+      margin-bottom: 1ex;
+    }
+  }
 }
 
 .event-type-choser-label {
