III-1328: make sure the preview url on the dashboard gets updated once the offer info arrives

--- a/src/dashboard/components/dashboard-item.directive.html
+++ b/src/dashboard/components/dashboard-item.directive.html
@@ -18,7 +18,7 @@
     <button type="button" class="btn btn-default" uib-dropdown-toggle><span class="caret"></span></button>
     <ul uib-dropdown-menu role="menu">
       <li role="menuitem">
-        <a ng-href="{{ ::event.url + '/preview' }}">Voorbeeld</a>
+        <a ng-href="{{ ::event.url }}/preview">Voorbeeld</a>
       </li>
       <li class="divider"></li>
       <li role="menuitem">
