III-1544 implement preview routing on event and place titles on dashboard

--- a/src/dashboard/components/dashboard-item.directive.html
+++ b/src/dashboard/components/dashboard-item.directive.html
@@ -1,6 +1,6 @@
 <td>
   <strong>
-    <a ng-href="{{ ::event.url }}" ng-bind="::event.name"></a>
+    <a ng-href="{{ event.url  + '/preview' }}" ng-bind="::event.name"></a>
   </strong>
   <br/>
   <small>
