--- a/src/event_form/components/reservation-period/reservation-period.html
+++ b/src/event_form/components/reservation-period/reservation-period.html
@@ -5,63 +5,63 @@
 </div>
 <div class="col-sm-12" ng-show="haveBookingPeriod">
     <div class="booking-period">
-        <p><strong>Reservatie periode</strong></p>
+        <div class="row">
+            <div class="col-lg-11">
+                <p><strong>Reservatie periode</strong></p>
+            </div>
+            <div class="col-lg-1">
+                <button ng-if="!info.booking" type="button" class="close" aria-label="Close" ng-click="deleteBookingPeriod()">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        </div>
         <div class="alert alert-danger" ng-if="errorMessage" ng-bind="::errorMessage">
         </div>
         <form name="bookingPeriod" class="booking-period">
-            <table class="table">
-                <tr>
-                    <td>
-                        <p><label>Van</label></p>
-                        <div class="row">
-                            <div class="col-xs-9 npr">
-                                <input name="bookingStartDate"
-                                       class="form-control"
-                                       type="text"
-                                       uib-datepicker-popup="dd/MM/yyyy"
-                                       datepicker-options="dateOptions"
-                                       ng-model="availabilityStarts"
-                                       ng-change="validateBookingPeriod()"
-                                       is-open="popup1.opened"
-                                       show-button-bar="false"
-                                       ng-required="true" />
-                            </div>
-                            <div class="col-xs-3 npl">
-                                <button type="button" class="btn btn-default" ng-click="open1()"><i class="fa fa-calendar" aria-hidden="true"></i></button>
-                            </div>
-                        </div>
-                    </td>
-                    <td>
-                        <p><label>Tot</label></p>
-                        <div class="row">
-                            <div class="col-xs-9 npr">
-                                <input name="bookingEndDate"
-                                       type="text"
-                                       class="form-control"
-                                       type="text"
-                                       uib-datepicker-popup="dd/MM/yyyy"
-                                       datepicker-options="dateOptions"
-                                       ng-model="availabilityEnds"
-                                       ng-change="validateBookingPeriod()"
-                                       is-open="popup2.opened"
-                                       show-button-bar="false"
-                                       ng-required="true" />
-                            </div>
-                            <div class="col-xs-3 npl">
-                                <span class="input-group-btn">
-                                    <button type="button" class="btn btn-default" ng-click="open2()"><i class="fa fa-calendar" aria-hidden="true"></i></button>
-                                </span>
-                            </div>
-                        </div>
-                    </td>
-                    <td>
-                        <button ng-if="!info.booking" type="button" class="close" aria-label="Close" ng-click="deleteBookingPeriod()">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </td>
-                </tr>
-            </table>
-        </form>
 
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="input-group">
+                        <span class="input-group-addon">Van</span>
+                        <input name="bookingStartDate"
+                               class="form-control"
+                               type="text"
+                               uib-datepicker-popup="dd/MM/yyyy"
+                               datepicker-options="dateOptions"
+                               ng-model="availabilityStarts"
+                               ng-change="validateBookingPeriod()"
+                               is-open="popup1.opened"
+                               show-button-bar="false"
+                               ng-required="true" />
+                        <span class="input-group-btn">
+                            <button type="button" class="btn btn-default" ng-click="open1()">
+                                <i class="fa fa-calendar" aria-hidden="true"></i>
+                            </button>
+                        </span>
+                    </div><!-- /input-group -->
+                </div><!-- /.col-lg-6 -->
+                <div class="col-lg-6">
+                    <div class="input-group">
+                        <span class="input-group-addon">Tot</span>
+                        <input name="bookingEndDate"
+                               type="text"
+                               class="form-control"
+                               type="text"
+                               uib-datepicker-popup="dd/MM/yyyy"
+                               datepicker-options="dateOptions"
+                               ng-model="availabilityEnds"
+                               ng-change="validateBookingPeriod()"
+                               is-open="popup2.opened"
+                               show-button-bar="false"
+                               ng-required="true" />
+                        <span class="input-group-btn">
+                            <button type="button" class="btn btn-default" ng-click="open2()">
+                                <i class="fa fa-calendar" aria-hidden="true"></i>
+                            </button>
+                          </span>
+                    </div><!-- /input-group -->
+                </div><!-- /.col-lg-6 -->
+            </div><!-- /.row -->
+        </form>
     </div>
 </div>
