--- a/src/event_form/components/uitpas-modal/event-form-uitpas-modal.html
+++ b/src/event_form/components/uitpas-modal/event-form-uitpas-modal.html
@@ -1,21 +1,25 @@
 <div class="modal-content">
     <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span>
+        <button type="button" class="close" ng-click="cancel()" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span>
         </button>
         <h4 class="modal-title">UiTPAS-informatie</h4>
     </div>
     <div class="modal-body">
-        <div class="row">
-            <div class="form-group">
-                <div class="card-system">
-                    <label>Kaartsysteem</label>
-
+        <div class="form-group">
+            <div class="card-system">
+                <label>Kaartsysteem</label>
+                <div class="radios" ng-repeat="cardsystem in cardSystems">
+                    <input type="radio" ng-model="cardsystem.name" ng-change="selectCardSystem($index)"> {{cardsystem.name}}
                 </div>
             </div>
-            <div class="form-group">
+        </div>
+        <div class="form-group" ng-show="selectedCardSystem !== ''">
+            <div class="distribution-key">
+                <label>Verdeelsleutel</label>
                 <div class="distribution-key">
-                    <label>Verdeelsleutel</label>
-
+                    <select>
+                        <option ng-repeat="distributionKey in selectedCardSystem.distributionKeys">{{distributionKey.name}}</option>
+                    </select>
                 </div>
             </div>
         </div>
