III-1492 handle save of uitpas data modal

--- a/src/event_form/components/uitpas-modal/event-form-uitpas-modal.html
+++ b/src/event_form/components/uitpas-modal/event-form-uitpas-modal.html
@@ -39,7 +39,7 @@
         <button type="button"
                 class="btn btn-primary organisator-toevoegen-bewaren"
                 ng-disabled="disableSubmit"
-                ng-click="validateUitpasData()">
+                ng-click="saveUitpasData()">
             Bewaren <i class="fa fa-circle-o-notch fa-spin" ng-show="saving"></i>
         </button>
     </div>
