--- a/src/event_form/components/uitpas-modal/event-form-uitpas-modal.html
+++ b/src/event_form/components/uitpas-modal/event-form-uitpas-modal.html
@@ -22,11 +22,10 @@
             <div class="distribution-key">
                 <label>Verdeelsleutel</label>
                 <div class="distribution-key">
-                    <select>
-                        <option ng-repeat="distributionKey in selectedCardSystem.distributionKeys"
-                                value="{{distributionKey.name}}"
-                                ng-model="$parent.formData.distributionKey"
-                                ng-change="selectDistributionKey($index)">{{distributionKey.name}}</option>
+                    <select ng-model="formData.distributionKey"
+                            ng-options="distributionKey.id as distributionKey.name for distributionKey in selectedCardSystem.distributionKeys"
+                            ng-change="selectDistributionKey()">
+                        <option value="">--Selecteer een verdeelsleutel--</option>
                     </select>
                 </div>
             </div>
