--- a/src/event_form/components/uitpas-modal/event-form-uitpas-modal.html
+++ b/src/event_form/components/uitpas-modal/event-form-uitpas-modal.html
@@ -18,7 +18,7 @@
                 </div>
             </div>
         </div>
-        <div class="form-group" ng-show="selectedCardSystem !== undefined">
+        <div class="form-group" ng-show="formData.cardSystem">
             <div class="distribution-key">
                 <label>Verdeelsleutel</label>
                 <div class="distribution-key">
